--- a/crypto.css
+++ b/crypto.css
@@ -438,7 +438,7 @@ main section.right .investments {
 main section.right .investments img{
     width: 2.4rem;
 }
-main section.right .investments header{
+main section.right .investments .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -449,4 +449,22 @@ main section.right .investments .header a{
     display: flex;
     align-items: center;
     color: var(--color-primary);
+}
+
+/*<!--investment var-->*/
+
+main section.right .investments .investment{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--card-padding);
+    border-bottom: 1px solid var(--color-light);
+    transition: all 0.3s ease;
+}
+main section.right .investments .investment :last-child{
+    border-bottom: none;
+}
+main section.right .investments .investment:hover{
+    background: var(--color-light);
+    cursor: pointer;
 }
