--- a/crypto.css
+++ b/crypto.css
@@ -24,6 +24,14 @@
     --border-radius-2: 6px;
 }
 
+.dark-theme{
+    --color-white: #131316;
+    --color-light: #23232a;
+    --color-gray-light: #86848c;
+    --color-gray-dark: #adacd5;
+    --color-dark: #ddd;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -456,7 +464,7 @@ main section.right .investments .header a{
 main section.right .investments .investment{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: var(--card-padding);
     border-bottom: 1px solid var(--color-light);
     transition: all 0.3s ease;
