--- a/crypto.css
+++ b/crypto.css
@@ -215,7 +215,7 @@ nav .profile-area button{
 /* <!--main--> */
 main{
     display: grid;
-    grid-template-columns: 16rem auto 38rem;
+    grid-template-columns: 12rem auto 26rem;
     gap: 2rem;
     width: 96%;
     margin: 1rem auto 4rem;
@@ -226,7 +226,7 @@ main aside{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 80vh;
+    height: 88vh;
 }
 main aside button#close-btn{
     border: none;
@@ -310,7 +310,7 @@ main section.middle .cards{
     margin-top: 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1.1rem;
+    gap: 1.5rem;
 }
 main section.middle .cards .card{
     background: linear-gradient(#ff796f, #bd261b);
@@ -613,7 +613,7 @@ main .recent-transactions .transaction  .card-details .card{
     }
     main section.middle .fast-payment{
         flex-direction: column;
-        align-items: center;
+        align-items: flex-starts;
         margin-top: 3rem;
         gap: 1rem;
     }
